# modelzilla

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  test.yml
modelzilla/: main.py  media.py  pipeline.py
modelzilla/plugins/: __init__.py  hf_object_det.py
tests/: conftest.py  test_cli.py
