[tool.poetry]
name = "modelzilla"
version = "0.1.0"
description = ""
authors = ["David Redo <dredonieto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = {version = "^4.47.1", extras = ["hf"]}
supervision = "^0.25.1"

[tool.poetry.scripts]
modelzilla = "modelzilla.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
