[project]
name = "modelzilla"
version = "0.1.0"
description = "It is a lightweight Python package that enables developers to transform any AI model into a fully functional Command-Line Interface (CLI) plugin"
authors = [{name = "David Redo", email = "dredonieto@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "supervision>=0.25.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
hf = [
    "transformers>=4.47.1",
    "torch>=2.1.0",
    "timm>=1.0.13",
]

[project.urls]
Homepage = "https://github.com/David-rn/modelzilla/"
Issues = "https://github.com/David-rn/modelzilla/issues"

[tool.poetry]
packages = [{include = "modelzilla"}]

[tool.poetry.scripts]
modelzilla = "modelzilla.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
